load(
    ":test_macro.bzl",
    "py_macro_consumer_runner_capture_test",
    "py_macro_consumer_runner_custom_attrs_target",
    "py_macro_consumer_runner_custom_attrs_test",
    "py_macro_consumer_runner_explicit_imports_target",
    "py_macro_consumer_runner_explicit_imports_test",
    "py_macro_consumer_runner_no_rule_no_main_target_rule",
    "py_macro_consumer_runner_no_rule_no_main_failure_test",
    "py_macro_consumer_runner_target",
    "py_macro_consumer_runner_with_capture_target",
    "py_macro_consumer_runner_with_main_target",
    "py_macro_consumer_runner_wiring_test",
    "py_macro_env_none_target",
    "py_macro_env_none_wiring_test",
    "py_macro_explicit_service_target",
    "py_macro_explicit_service_wiring_test",
    "py_macro_invalid_runner_mode_target_rule",
    "py_macro_invalid_runner_mode_failure_test",
    "py_macro_multi_service_target",
    "py_macro_multi_service_wiring_test",
    "py_macro_public_wrapper_test",
    "py_macro_select_inputs_target",
    "py_macro_select_inputs_wiring_test",
    "py_macro_single_service_target",
    "py_macro_single_service_wiring_test",
    "resolve_topt_service_key_missing_failure_test",
    "resolve_topt_service_key_missing_target_rule",
    "resolve_topt_service_key_unknown_failure_test",
    "resolve_topt_service_key_unknown_target_rule",
    "select_service_entry_empty_mapping_failure_test",
    "select_service_entry_empty_mapping_target_rule",
    "select_service_entry_malformed_topt_data_failure_test",
    "select_service_entry_malformed_topt_data_target_rule",
)
load(
    ":test_payloads_selector.bzl",
    "selector_attr_precedence_target",
    "selector_attr_precedence_test",
    "selector_deps_precedence_target",
    "selector_deps_precedence_test",
    "selector_explicit_miss_failure_target",
    "selector_explicit_miss_failure_test",
    "selector_explicit_precedence_target",
    "selector_explicit_precedence_test",
    "selector_fallback_target",
    "selector_fallback_test",
    "selector_imports_precedence_target",
    "selector_imports_precedence_test",
    "selector_include_disabled_target",
    "selector_include_disabled_test",
    "selector_no_match_fallback_target",
    "selector_no_match_fallback_test",
    "selector_override_miss_failure_target",
    "selector_override_miss_failure_test",
    "selector_override_target",
    "selector_override_test",
    "selector_payload_fixture_targets",
)
load(
    ":test_selection_utils.bzl",
    "build_module_labels_empty_entry_failure_test",
    "build_module_labels_empty_entry_target_rule",
    "build_module_labels_invalid_entry_failure_test",
    "build_module_labels_invalid_entry_target_rule",
    "build_module_labels_invalid_shape_failure_test",
    "build_module_labels_invalid_shape_target_rule",
    "build_module_labels_unsanitized_entry_failure_test",
    "build_module_labels_unsanitized_entry_target_rule",
    "build_module_labels_valid_test",
    "normalize_python_identifier_edge_cases_test",
    "normalize_user_data_handles_none_test",
    "normalize_user_data_invalid_type_failure_test",
    "normalize_user_data_invalid_type_target_rule",
    "py_stub_includes_manifest_in_files_test",
    "resolve_topt_service_key_prefers_exact_then_sanitized_test",
    "select_module_group_name_test",
    "service_mapping_entries_filters_non_service_test",
)

service_mapping_entries_filters_non_service_test(
    name = "service_mapping_entries_filters_non_service_test",
    size = "small",
    timeout = "short",
)

resolve_topt_service_key_prefers_exact_then_sanitized_test(
    name = "resolve_topt_service_key_prefers_exact_then_sanitized_test",
    size = "small",
    timeout = "short",
)

select_module_group_name_test(
    name = "select_module_group_name_test",
    size = "small",
    timeout = "short",
)

normalize_python_identifier_edge_cases_test(
    name = "normalize_python_identifier_edge_cases_test",
    size = "small",
    timeout = "short",
)

normalize_user_data_handles_none_test(
    name = "normalize_user_data_handles_none_test",
    size = "small",
    timeout = "short",
)

normalize_user_data_invalid_type_target_rule(
    name = "normalize_user_data_invalid_type_target",
    tags = ["manual"],
)

normalize_user_data_invalid_type_failure_test(
    name = "normalize_user_data_invalid_type_failure_test",
    target_under_test = ":normalize_user_data_invalid_type_target",
)

build_module_labels_valid_test(
    name = "build_module_labels_valid_test",
    size = "small",
    timeout = "short",
)

py_stub_includes_manifest_in_files_test(
    name = "py_stub_includes_manifest_in_files_test",
    size = "small",
    timeout = "short",
)

selector_payload_fixture_targets()

selector_explicit_precedence_target(
    name = "selector_explicit_precedence_target",
    tags = ["manual"],
)

selector_explicit_precedence_test(
    name = "selector_explicit_precedence_test",
    target_under_test = ":selector_explicit_precedence_target",
)

selector_imports_precedence_target(
    name = "selector_imports_precedence_target",
    tags = ["manual"],
)

selector_imports_precedence_test(
    name = "selector_imports_precedence_test",
    target_under_test = ":selector_imports_precedence_target",
)

selector_deps_precedence_target(
    name = "selector_deps_precedence_target",
    tags = ["manual"],
)

selector_deps_precedence_test(
    name = "selector_deps_precedence_test",
    target_under_test = ":selector_deps_precedence_target",
)

selector_attr_precedence_target(
    name = "selector_attr_precedence_target",
    tags = ["manual"],
)

selector_attr_precedence_test(
    name = "selector_attr_precedence_test",
    target_under_test = ":selector_attr_precedence_target",
)

selector_fallback_target(
    name = "selector_fallback_target",
    tags = ["manual"],
)

selector_fallback_test(
    name = "selector_fallback_test",
    target_under_test = ":selector_fallback_target",
)

selector_no_match_fallback_target(
    name = "selector_no_match_fallback_target",
    tags = ["manual"],
)

selector_no_match_fallback_test(
    name = "selector_no_match_fallback_test",
    target_under_test = ":selector_no_match_fallback_target",
)

selector_include_disabled_target(
    name = "selector_include_disabled_target",
    tags = ["manual"],
)

selector_include_disabled_test(
    name = "selector_include_disabled_test",
    target_under_test = ":selector_include_disabled_target",
)

selector_override_target(
    name = "selector_override_target",
    tags = ["manual"],
)

selector_override_test(
    name = "selector_override_test",
    target_under_test = ":selector_override_target",
)

selector_explicit_miss_failure_target(
    name = "selector_explicit_miss_failure_target",
    tags = ["manual"],
)

selector_explicit_miss_failure_test(
    name = "selector_explicit_miss_failure_test",
    target_under_test = ":selector_explicit_miss_failure_target",
)

selector_override_miss_failure_target(
    name = "selector_override_miss_failure_target",
    tags = ["manual"],
)

selector_override_miss_failure_test(
    name = "selector_override_miss_failure_test",
    target_under_test = ":selector_override_miss_failure_target",
)

# -- consumer_runner targets and tests --

py_macro_consumer_runner_target(
    name = "py_macro_consumer_runner_target",
    tags = ["manual"],
)

py_macro_consumer_runner_wiring_test(
    name = "py_macro_consumer_runner_wiring_test",
    target_under_test = ":py_macro_consumer_runner_target__raw_python_test",
)

py_macro_consumer_runner_with_capture_target(
    name = "py_macro_consumer_runner_with_capture_target",
    tags = ["manual"],
)

py_macro_consumer_runner_capture_test(
    name = "py_macro_consumer_runner_capture_test",
    target_under_test = ":py_macro_consumer_runner_with_capture_target__raw_python_test",
)

py_macro_consumer_runner_explicit_imports_target(
    name = "py_macro_consumer_runner_explicit_imports_target",
    tags = ["manual"],
)

py_macro_consumer_runner_explicit_imports_test(
    name = "py_macro_consumer_runner_explicit_imports_test",
    target_under_test = ":py_macro_consumer_runner_explicit_imports_target__raw_python_test",
)

py_macro_consumer_runner_with_main_target(
    name = "py_macro_consumer_runner_with_main_target",
    tags = ["manual"],
)

py_macro_consumer_runner_custom_attrs_target(
    name = "py_macro_consumer_runner_custom_attrs_target",
    tags = ["manual"],
)

py_macro_consumer_runner_custom_attrs_test(
    name = "py_macro_consumer_runner_custom_attrs_test",
    target_under_test = ":py_macro_consumer_runner_custom_attrs_target__raw_python_test",
)

py_macro_consumer_runner_no_rule_no_main_target_rule(
    name = "py_macro_consumer_runner_no_rule_no_main_target",
    tags = ["manual"],
)

py_macro_consumer_runner_no_rule_no_main_failure_test(
    name = "py_macro_consumer_runner_no_rule_no_main_failure_test",
    target_under_test = ":py_macro_consumer_runner_no_rule_no_main_target",
)

py_macro_invalid_runner_mode_target_rule(
    name = "py_macro_invalid_runner_mode_target",
    tags = ["manual"],
)

py_macro_invalid_runner_mode_failure_test(
    name = "py_macro_invalid_runner_mode_failure_test",
    target_under_test = ":py_macro_invalid_runner_mode_target",
)

# -- existing targets and tests --

py_macro_single_service_target(
    name = "py_macro_single_service_target",
    tags = ["manual"],
)

py_macro_single_service_wiring_test(
    name = "py_macro_single_service_wiring_test",
    target_under_test = ":py_macro_single_service_target__raw_python_test",
)

py_macro_public_wrapper_test(
    name = "py_macro_public_wrapper_test",
    target_under_test = ":py_macro_single_service_target",
)

py_macro_multi_service_target(
    name = "py_macro_multi_service_target",
    tags = ["manual"],
)

py_macro_multi_service_wiring_test(
    name = "py_macro_multi_service_wiring_test",
    target_under_test = ":py_macro_multi_service_target__raw_python_test",
)

py_macro_env_none_target(
    name = "py_macro_env_none_target",
    tags = ["manual"],
)

py_macro_env_none_wiring_test(
    name = "py_macro_env_none_wiring_test",
    target_under_test = ":py_macro_env_none_target__raw_python_test",
)

py_macro_explicit_service_target(
    name = "py_macro_explicit_service_target",
    tags = ["manual"],
)

py_macro_explicit_service_wiring_test(
    name = "py_macro_explicit_service_wiring_test",
    target_under_test = ":py_macro_explicit_service_target__raw_python_test",
)

py_macro_select_inputs_target(
    name = "py_macro_select_inputs_target",
    tags = ["manual"],
)

py_macro_select_inputs_wiring_test(
    name = "py_macro_select_inputs_wiring_test",
    target_under_test = ":py_macro_select_inputs_target__raw_python_test",
)

build_module_labels_invalid_shape_target_rule(
    name = "build_module_labels_invalid_shape_target",
    tags = ["manual"],
)

build_module_labels_invalid_shape_failure_test(
    name = "build_module_labels_invalid_shape_failure_test",
    target_under_test = ":build_module_labels_invalid_shape_target",
)

build_module_labels_invalid_entry_target_rule(
    name = "build_module_labels_invalid_entry_target",
    tags = ["manual"],
)

build_module_labels_invalid_entry_failure_test(
    name = "build_module_labels_invalid_entry_failure_test",
    target_under_test = ":build_module_labels_invalid_entry_target",
)

build_module_labels_empty_entry_target_rule(
    name = "build_module_labels_empty_entry_target",
    tags = ["manual"],
)

build_module_labels_empty_entry_failure_test(
    name = "build_module_labels_empty_entry_failure_test",
    target_under_test = ":build_module_labels_empty_entry_target",
)

build_module_labels_unsanitized_entry_target_rule(
    name = "build_module_labels_unsanitized_entry_target",
    tags = ["manual"],
)

build_module_labels_unsanitized_entry_failure_test(
    name = "build_module_labels_unsanitized_entry_failure_test",
    target_under_test = ":build_module_labels_unsanitized_entry_target",
)

resolve_topt_service_key_missing_target_rule(
    name = "resolve_topt_service_key_missing_target",
    tags = ["manual"],
)

resolve_topt_service_key_missing_failure_test(
    name = "resolve_topt_service_key_missing_failure_test",
    target_under_test = ":resolve_topt_service_key_missing_target",
)

resolve_topt_service_key_unknown_target_rule(
    name = "resolve_topt_service_key_unknown_target",
    tags = ["manual"],
)

resolve_topt_service_key_unknown_failure_test(
    name = "resolve_topt_service_key_unknown_failure_test",
    target_under_test = ":resolve_topt_service_key_unknown_target",
)

select_service_entry_malformed_topt_data_target_rule(
    name = "select_service_entry_malformed_topt_data_target",
    tags = ["manual"],
)

select_service_entry_malformed_topt_data_failure_test(
    name = "select_service_entry_malformed_topt_data_failure_test",
    target_under_test = ":select_service_entry_malformed_topt_data_target",
)

select_service_entry_empty_mapping_target_rule(
    name = "select_service_entry_empty_mapping_target",
    tags = ["manual"],
)

select_service_entry_empty_mapping_failure_test(
    name = "select_service_entry_empty_mapping_failure_test",
    target_under_test = ":select_service_entry_empty_mapping_target",
)

test_suite(
    name = "tests",
    tests = [
        ":build_module_labels_empty_entry_failure_test",
        ":build_module_labels_invalid_entry_failure_test",
        ":build_module_labels_invalid_shape_failure_test",
        ":build_module_labels_unsanitized_entry_failure_test",
        ":build_module_labels_valid_test",
        ":normalize_python_identifier_edge_cases_test",
        ":normalize_user_data_handles_none_test",
        ":normalize_user_data_invalid_type_failure_test",
        ":py_macro_consumer_runner_capture_test",
        ":py_macro_consumer_runner_custom_attrs_test",
        ":py_macro_consumer_runner_explicit_imports_test",
        ":py_macro_consumer_runner_no_rule_no_main_failure_test",
        ":py_macro_consumer_runner_wiring_test",
        ":py_macro_env_none_wiring_test",
        ":py_macro_explicit_service_wiring_test",
        ":py_macro_invalid_runner_mode_failure_test",
        ":py_macro_multi_service_wiring_test",
        ":py_macro_select_inputs_wiring_test",
        ":py_macro_single_service_wiring_test",
        ":py_stub_includes_manifest_in_files_test",
        ":resolve_topt_service_key_missing_failure_test",
        ":resolve_topt_service_key_prefers_exact_then_sanitized_test",
        ":resolve_topt_service_key_unknown_failure_test",
        ":select_module_group_name_test",
        ":select_service_entry_empty_mapping_failure_test",
        ":select_service_entry_malformed_topt_data_failure_test",
        ":selector_attr_precedence_test",
        ":selector_deps_precedence_test",
        ":selector_explicit_miss_failure_test",
        ":selector_explicit_precedence_test",
        ":selector_fallback_test",
        ":selector_imports_precedence_test",
        ":selector_include_disabled_test",
        ":selector_no_match_fallback_test",
        ":selector_override_miss_failure_test",
        ":selector_override_test",
        ":service_mapping_entries_filters_non_service_test",
    ],
)
