load(
    "//tools/tests/core:test_common_utils.bzl",
    "dedup_keys_test",
    "sanitize_label_fragment_test",
    "validate_api_key_missing_failure_test",
    "validate_api_key_normalization_test",
    "validate_api_key_missing_target_rule",
    "validate_api_key_whitespace_failure_test",
    "validate_api_key_whitespace_target_rule",
    "validate_runtime_name_test",
    "validate_runtime_version_test",
    "validate_service_name_missing_failure_test",
    "validate_service_name_missing_target_rule",
    "validate_service_name_test",
    "validate_service_name_too_long_failure_test",
    "validate_service_name_too_long_target_rule",
    "validate_service_name_whitespace_failure_test",
    "validate_service_name_whitespace_target_rule",
)
load(
    "//tools/tests/core:test_multi_sync_utils.bzl",
    "compute_repo_names_test",
    "compute_service_keys_dedups_collisions_test",
    "record_multi_repo_owner_duplicate_failure_test",
    "record_multi_repo_owner_duplicate_target_rule",
    "record_multi_repo_owner_success_test",
    "render_multi_aggregate_bzl_contains_expected_targets_test",
    "render_multi_aggregate_bzl_mismatch_failure_test",
    "render_multi_aggregate_bzl_mismatch_target_rule",
)
load(
    "//tools/tests/core:test_sync_utils.bzl",
    "decode_json_object_array_failure_test",
    "decode_json_object_array_target_rule",
    "decode_json_object_empty_failure_test",
    "decode_json_object_empty_target_rule",
    "decode_json_object_malformed_array_failure_test",
    "decode_json_object_malformed_array_target_rule",
    "decode_json_object_malformed_object_failure_test",
    "decode_json_object_malformed_object_target_rule",
    "decode_json_object_non_json_failure_test",
    "decode_json_object_non_json_target_rule",
    "decode_json_object_valid_test",
    "dd_site_normalization_test",
    "dirname_test",
    "export_bzl_manifest_path_test",
    "http_execute_timeout_seconds_test",
    "module_label_map_collision_test",
    "normalize_ref_test",
    "parse_go_module_path_test",
    "partition_unix_headers_test",
    "record_sync_extension_repo_owner_duplicate_failure_test",
    "record_sync_extension_repo_owner_duplicate_target_rule",
    "record_sync_extension_repo_owner_success_test",
    "render_module_runfiles_bzl_respects_manifest_root_test",
    "resolve_dd_api_base_test",
)
load(
    "//tools/tests/core:test_uploader_utils.bzl",
    "bash_curl_retry_flags_test",
    "codeowners_compile_regex_edge_cases_test",
    "codeowners_compile_regex_test",
    "codeowners_derived_candidate_filter_test",
    "codeowners_glob_to_regex_edge_cases_test",
    "codeowners_glob_to_regex_test",
    "codeowners_lookup_order_empty_script_dir_test",
    "codeowners_lookup_order_test",
    "codeowners_section_header_powershell_parity_test",
    "codeowners_section_header_classification_test",
    "runfile_manifest_bash_resolution_test",
    "runfile_manifest_parser_parity_test",
    "runfile_manifest_powershell_resolution_test",
    "render_template_missing_placeholder_test",
    "render_template_substitution_test",
    "render_template_unescape_only_test",
    "strip_workspace_prefix_powershell_windows_test",
)

# Starlark unit tests for core helpers (sync, uploader, common utils).
dd_site_normalization_test(
    name = "dd_site_normalization_test",
    size = "small",
    timeout = "short",
)

# Validate DD_TEST_OPTIMIZATION_API_BASE override behavior.
resolve_dd_api_base_test(
    name = "resolve_dd_api_base_test",
    size = "small",
    timeout = "short",
)

module_label_map_collision_test(
    name = "module_label_map_collision_test",
    size = "small",
    timeout = "short",
)

normalize_ref_test(
    name = "normalize_ref_test",
    size = "small",
    timeout = "short",
)

parse_go_module_path_test(
    name = "parse_go_module_path_test",
    size = "small",
    timeout = "short",
)

dirname_test(
    name = "dirname_test",
    size = "small",
    timeout = "short",
)

export_bzl_manifest_path_test(
    name = "export_bzl_manifest_path_test",
    size = "small",
    timeout = "short",
)

sanitize_label_fragment_test(
    name = "sanitize_label_fragment_test",
    size = "small",
    timeout = "short",
)

dedup_keys_test(
    name = "dedup_keys_test",
    size = "small",
    timeout = "short",
)

validate_service_name_test(
    name = "validate_service_name_test",
    size = "small",
    timeout = "short",
)

validate_api_key_normalization_test(
    name = "validate_api_key_normalization_test",
    size = "small",
    timeout = "short",
)

validate_runtime_name_test(
    name = "validate_runtime_name_test",
    size = "small",
    timeout = "short",
)

validate_runtime_version_test(
    name = "validate_runtime_version_test",
    size = "small",
    timeout = "short",
)

validate_api_key_missing_target_rule(
    name = "validate_api_key_missing_target",
    tags = ["manual"],
)

validate_api_key_missing_failure_test(
    name = "validate_api_key_missing_failure_test",
    target_under_test = ":validate_api_key_missing_target",
)

validate_api_key_whitespace_target_rule(
    name = "validate_api_key_whitespace_target",
    tags = ["manual"],
)

validate_api_key_whitespace_failure_test(
    name = "validate_api_key_whitespace_failure_test",
    target_under_test = ":validate_api_key_whitespace_target",
)

validate_service_name_missing_target_rule(
    name = "validate_service_name_missing_target",
    tags = ["manual"],
)

validate_service_name_missing_failure_test(
    name = "validate_service_name_missing_failure_test",
    target_under_test = ":validate_service_name_missing_target",
)

validate_service_name_whitespace_target_rule(
    name = "validate_service_name_whitespace_target",
    tags = ["manual"],
)

validate_service_name_whitespace_failure_test(
    name = "validate_service_name_whitespace_failure_test",
    target_under_test = ":validate_service_name_whitespace_target",
)

validate_service_name_too_long_target_rule(
    name = "validate_service_name_too_long_target",
    tags = ["manual"],
)

validate_service_name_too_long_failure_test(
    name = "validate_service_name_too_long_failure_test",
    target_under_test = ":validate_service_name_too_long_target",
)

compute_service_keys_dedups_collisions_test(
    name = "compute_service_keys_dedups_collisions_test",
    size = "small",
    timeout = "short",
)

compute_repo_names_test(
    name = "compute_repo_names_test",
    size = "small",
    timeout = "short",
)

record_multi_repo_owner_success_test(
    name = "record_multi_repo_owner_success_test",
    size = "small",
    timeout = "short",
)

render_multi_aggregate_bzl_contains_expected_targets_test(
    name = "render_multi_aggregate_bzl_contains_expected_targets_test",
    size = "small",
    timeout = "short",
)

render_multi_aggregate_bzl_mismatch_target_rule(
    name = "render_multi_aggregate_bzl_mismatch_target",
    tags = ["manual"],
)

render_multi_aggregate_bzl_mismatch_failure_test(
    name = "render_multi_aggregate_bzl_mismatch_failure_test",
    target_under_test = ":render_multi_aggregate_bzl_mismatch_target",
)

record_multi_repo_owner_duplicate_target_rule(
    name = "record_multi_repo_owner_duplicate_target",
    tags = ["manual"],
)

record_multi_repo_owner_duplicate_failure_test(
    name = "record_multi_repo_owner_duplicate_failure_test",
    target_under_test = ":record_multi_repo_owner_duplicate_target",
)

http_execute_timeout_seconds_test(
    name = "http_execute_timeout_seconds_test",
    size = "small",
    timeout = "short",
)

render_module_runfiles_bzl_respects_manifest_root_test(
    name = "render_module_runfiles_bzl_respects_manifest_root_test",
    size = "small",
    timeout = "short",
)

partition_unix_headers_test(
    name = "partition_unix_headers_test",
    size = "small",
    timeout = "short",
)

record_sync_extension_repo_owner_success_test(
    name = "record_sync_extension_repo_owner_success_test",
    size = "small",
    timeout = "short",
)

decode_json_object_valid_test(
    name = "decode_json_object_valid_test",
    size = "small",
    timeout = "short",
)

decode_json_object_empty_target_rule(
    name = "decode_json_object_empty_target",
    tags = ["manual"],
)

decode_json_object_empty_failure_test(
    name = "decode_json_object_empty_failure_test",
    target_under_test = ":decode_json_object_empty_target",
)

decode_json_object_non_json_target_rule(
    name = "decode_json_object_non_json_target",
    tags = ["manual"],
)

decode_json_object_non_json_failure_test(
    name = "decode_json_object_non_json_failure_test",
    target_under_test = ":decode_json_object_non_json_target",
)

decode_json_object_array_target_rule(
    name = "decode_json_object_array_target",
    tags = ["manual"],
)

decode_json_object_array_failure_test(
    name = "decode_json_object_array_failure_test",
    target_under_test = ":decode_json_object_array_target",
)

decode_json_object_malformed_object_target_rule(
    name = "decode_json_object_malformed_object_target",
    tags = ["manual"],
)

decode_json_object_malformed_object_failure_test(
    name = "decode_json_object_malformed_object_failure_test",
    target_under_test = ":decode_json_object_malformed_object_target",
)

decode_json_object_malformed_array_target_rule(
    name = "decode_json_object_malformed_array_target",
    tags = ["manual"],
)

decode_json_object_malformed_array_failure_test(
    name = "decode_json_object_malformed_array_failure_test",
    target_under_test = ":decode_json_object_malformed_array_target",
)

record_sync_extension_repo_owner_duplicate_target_rule(
    name = "record_sync_extension_repo_owner_duplicate_target",
    tags = ["manual"],
)

record_sync_extension_repo_owner_duplicate_failure_test(
    name = "record_sync_extension_repo_owner_duplicate_failure_test",
    target_under_test = ":record_sync_extension_repo_owner_duplicate_target",
)

bash_curl_retry_flags_test(
    name = "bash_curl_retry_flags_test",
    size = "small",
    timeout = "short",
)

render_template_substitution_test(
    name = "render_template_substitution_test",
    size = "small",
    timeout = "short",
)

render_template_unescape_only_test(
    name = "render_template_unescape_only_test",
    size = "small",
    timeout = "short",
)

render_template_missing_placeholder_test(
    name = "render_template_missing_placeholder_test",
    size = "small",
    timeout = "short",
)

codeowners_glob_to_regex_test(
    name = "codeowners_glob_to_regex_test",
    size = "small",
    timeout = "short",
)

codeowners_glob_to_regex_edge_cases_test(
    name = "codeowners_glob_to_regex_edge_cases_test",
    size = "small",
    timeout = "short",
)

codeowners_compile_regex_test(
    name = "codeowners_compile_regex_test",
    size = "small",
    timeout = "short",
)

codeowners_compile_regex_edge_cases_test(
    name = "codeowners_compile_regex_edge_cases_test",
    size = "small",
    timeout = "short",
)

codeowners_section_header_classification_test(
    name = "codeowners_section_header_classification_test",
    size = "small",
    timeout = "short",
)

codeowners_section_header_powershell_parity_test(
    name = "codeowners_section_header_powershell_parity_test",
    size = "small",
    timeout = "short",
)

codeowners_derived_candidate_filter_test(
    name = "codeowners_derived_candidate_filter_test",
    size = "small",
    timeout = "short",
)

strip_workspace_prefix_powershell_windows_test(
    name = "strip_workspace_prefix_powershell_windows_test",
    size = "small",
    timeout = "short",
)

runfile_manifest_bash_resolution_test(
    name = "runfile_manifest_bash_resolution_test",
    size = "small",
    timeout = "short",
)

runfile_manifest_powershell_resolution_test(
    name = "runfile_manifest_powershell_resolution_test",
    size = "small",
    timeout = "short",
)

runfile_manifest_parser_parity_test(
    name = "runfile_manifest_parser_parity_test",
    size = "small",
    timeout = "short",
)

codeowners_lookup_order_test(
    name = "codeowners_lookup_order_test",
    size = "small",
    timeout = "short",
)

codeowners_lookup_order_empty_script_dir_test(
    name = "codeowners_lookup_order_empty_script_dir_test",
    size = "small",
    timeout = "short",
)

# Core-only suite. Language suites are defined in sibling subpackages such as
# `//tools/tests/go:tests`.
test_suite(
    name = "tests",
    tests = [
        ":dd_site_normalization_test",
        ":resolve_dd_api_base_test",
        ":module_label_map_collision_test",
        ":normalize_ref_test",
        ":parse_go_module_path_test",
        ":dirname_test",
        ":export_bzl_manifest_path_test",
        ":sanitize_label_fragment_test",
        ":dedup_keys_test",
        ":validate_service_name_test",
        ":validate_api_key_normalization_test",
        ":validate_api_key_missing_failure_test",
        ":validate_api_key_whitespace_failure_test",
        ":validate_runtime_name_test",
        ":validate_runtime_version_test",
        ":validate_service_name_missing_failure_test",
        ":validate_service_name_whitespace_failure_test",
        ":validate_service_name_too_long_failure_test",
        ":compute_service_keys_dedups_collisions_test",
        ":compute_repo_names_test",
        ":record_multi_repo_owner_success_test",
        ":render_multi_aggregate_bzl_contains_expected_targets_test",
        ":render_multi_aggregate_bzl_mismatch_failure_test",
        ":record_multi_repo_owner_duplicate_failure_test",
        ":http_execute_timeout_seconds_test",
        ":render_module_runfiles_bzl_respects_manifest_root_test",
        ":partition_unix_headers_test",
        ":record_sync_extension_repo_owner_success_test",
        ":decode_json_object_valid_test",
        ":decode_json_object_empty_failure_test",
        ":decode_json_object_non_json_failure_test",
        ":decode_json_object_array_failure_test",
        ":decode_json_object_malformed_object_failure_test",
        ":decode_json_object_malformed_array_failure_test",
        ":record_sync_extension_repo_owner_duplicate_failure_test",
        ":bash_curl_retry_flags_test",
        ":render_template_substitution_test",
        ":render_template_unescape_only_test",
        ":render_template_missing_placeholder_test",
        ":codeowners_glob_to_regex_test",
        ":codeowners_glob_to_regex_edge_cases_test",
        ":codeowners_compile_regex_test",
        ":codeowners_compile_regex_edge_cases_test",
        ":codeowners_section_header_classification_test",
        ":codeowners_section_header_powershell_parity_test",
        ":codeowners_derived_candidate_filter_test",
        ":strip_workspace_prefix_powershell_windows_test",
        ":runfile_manifest_bash_resolution_test",
        ":runfile_manifest_powershell_resolution_test",
        ":runfile_manifest_parser_parity_test",
        ":codeowners_lookup_order_test",
        ":codeowners_lookup_order_empty_script_dir_test",
    ],
)
